--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,6 +2,9 @@
     section.main-menu.sec{
        width: 1257px;
    }
+	.box{
+       width: 993px;
+   }
    
 }
 @media only screen and (max-width: 1100px){
